changed ios release

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Elite Quiz",
-    "short_name": "Elite Quiz",
+    "name": "Nurse Values",
+    "short_name": "Nurse Values",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
